feat: character selection inprogress

--- a/pages/index.html
+++ b/pages/index.html
@@ -38,16 +38,19 @@
       </div> -->
     </div>
 
-    <!-- <div class="modal">
+    <div class="modal hidden">
       <section class="game-over-modal">
         <h1 class="gradient-text">GAME OVER</h1>
-        <p>&ldquo;Player Name&rdquo; won</p>
+
+        <p class="winner_name"></p>
+
         <small>Wanna give it another go?</small>
-        <button class="btn">Play Again</button>
+        <button class="btn" id="play_again">Play Again</button>
       </section>
-    </div> -->
+    </div>
 
     <button id="resetButton" class="btn">Reset Game</button>
+    <!-- <button id="resetButton" class="btn">Reset Game</button> -->
     <div id="gameMessage" class="game-message"></div>
 
     <script src="../assets/js/index.script.js"></script>
