--- a/pages/main.html
+++ b/pages/main.html
@@ -20,6 +20,91 @@
     <section>
       <form id="game-settings-form" class="game-settings-form">
         <label>
+          <p>Select Player Count</p>
+          <select name="player_count" id="player_count">
+            <option value="2">2 players</option>
+            <option value="3">3 players</option>
+            <option value="4">4 players</option>
+            <option value="5">5 players</option>
+            <option value="6">6 players</option>
+          </select>
+        </label>
+
+        <div class="avatar_exhibition">
+          <button>
+            <img src="../assets/avatars/frieza.png" alt="" />
+          </button>
+
+          <button>
+            <img src="../assets/avatars/goku.png" alt="" />
+          </button>
+
+          <button>
+            <img src="../assets/avatars/vegeta.png" alt="" />
+          </button>
+
+          <button>
+            <img src="../assets/avatars/sasuke.png" alt="" />
+          </button>
+
+          <button>
+            <img src="../assets/avatars/naruto.png" alt="" />
+          </button>
+
+          <button>
+            <img src="../assets/avatars/madara.png" alt="" />
+          </button>
+        </div>
+
+        <p class="character_select_reminder gradient-text">
+          "Player 1" choose your avatar and provide a username
+        </p>
+
+        <div class="player-wrapper">
+          <div class="player_detail">
+            <h5>Player 1</h5>
+            <img src="" alt="" />
+            <label>
+              <input type="text" placeholder="Player 1 Username" />
+            </label>
+            <button>Make AI</button>
+          </div>
+        </div>
+
+        <!-- <label>
+          <p>Select Pick AI</p>
+        </label> -->
+
+        <label>
+          <p>Select Board Size</p>
+          <select name="board_size" id="board_size">
+            <option value="6#6">6 X 6 board</option>
+            <option value="7#7">7 X 7 board</option>
+            <option value="8#8">8 x 8 board</option>
+            <option value="11#11">11 X 11 board</option>
+            <option value="12#12">12 X 12 board</option>
+            <option value="custom">Customize your board</option>
+          </select>
+        </label>
+
+        <div class="board_cust hidden">
+          <p style="font-weight: 500">Board customization</p>
+          <section>
+            <label>
+              <p>No. of rows</p>
+              <input min="1" max="12" type="number" id="rows_no" />
+              <p style="font-weight: 800" class="rows_no_error no_error"></p>
+            </label>
+
+            <label>
+              <p>No. of columns</p>
+              <input min="1" max="12" type="number" id="columns_no" />
+              <p style="font-weight: 800" class="columns_no_error no_error"></p>
+            </label>
+          </section>
+        </div>
+
+        <label>
           <p>Select Round Type</p>
           <select name="round-type" id="round-type">
             <option value="best-of-three">Best of three (3)</option>
