feat: game audion to board

--- a/pages/index.html
+++ b/pages/index.html
@@ -13,10 +13,14 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="../assets/css/main.styling.css" />
+    <link rel="stylesheet" href="../assets/css/index.styling.css" />
   </head>
 
   <body>
+    <button class="audio_btn">
+      <img src="../assets/images/audio.png" alt="audio" />
+    </button>
+    <audio id="bgMusic" src="../assets/audio/background_music.mp3" loop></audio>
     <form id="game-settings-form" class="game-settings-form">
       <h1 class="main_heading">NoughtsXCrosses</h1>
       <p class="main_deecription">
@@ -120,6 +124,6 @@
       </div>
     </form>
 
-    <script type="text/javascript" src="../assets/js/main.script.js"></script>
+    <script type="text/javascript" src="../assets/js/index.script.js"></script>
   </body>
 </html>
