--- a/pages/main.html
+++ b/pages/main.html
@@ -103,6 +103,8 @@
       </section>
     </div>
 
+    <div style="height: 60px"></div>
+
     <script>
       /** @type {HTMLButtonElement} */
       const audioBtnMain = document.querySelector(".audio_btn");
