--- a/pages/main.html
+++ b/pages/main.html
@@ -125,5 +125,6 @@
       });
     </script>
     <script src="../assets/js/main.script.js"></script>
+    <script src="../assets/js/mcts.js"></script>
   </body>
 </html>
